# ftensor

./: .gitignore  LICENSE  README.md  ftensor.cabal
bench/: Main.hs
include/: ftensor.h
src/Math/FTensor/: Algebra.hs  Core.hs  Core2.hs  General.hs  Internal.hs  InternalArray.hs  InternalTaggedList.hs  MultiIndexable.hs  Simple.hs  SizedList.hs  Types.hs
src/Math/FTensor/Internal/: Check.hs  TaggedList.hs
src/Math/FTensor/Lib/: Array.hs  General.hs  Simple.hs  TypeList.hs
src/Math/Ftensor/: Algebra.hs  General.hs  SizedList.hs
src/Math/Ftensor/Internal/: Check.hs
src/Math/Ftensor/Lib/: Array.hs  General.hs  TypeList.hs
test/: Main.hs
test/Tests/Math/FTensor/: Core.hs  Core2.hs  General.hs  Internal.hs  InternalArray.hs  InternalTaggedList.hs  Simple.hs  SizedList.hs  Types.hs
test/Tests/Math/FTensor/Internal/: TaggedList.hs
test/Tests/Math/FTensor/Lib/: Array.hs
test/Tests/Math/Ftensor/: General.hs  SizedList.hs
test/Tests/Math/Ftensor/Lib/: Array.hs
